--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-era uma vez uma garota chamada isis que em seu aniversario ganhou um skate de presente do seu avó falecido.
+<h1>isis e suas aventuras</h1>
+
+<p>era uma vez uma garota chamada isis, com cabelos loiros,olhos verdes, e era uma garota muito estrovertida e engraçada que em seu aniversario ganhou um skate de presente do seu avó falecido.
 mas o que ela nao sabia que esse skate tinha poderes inacreditaveis, esse skate quando vc pisava duas vezes rapidos 
 no chão ele soltava muita velocidade, quando isis descobiu isso ela ficou sem reação, tentou  conta para a mãe dela
-mais ela não acreditou, tentou contar para o seu pai e ele tambem não acreditava. 
-então ela decidiu salvar o animais com esse seu super skate, todas as 20:00 da noite ela saia para salvar a vida dos
+mais ela não acreditou, tentou contar para o seu pai e ele tambem não acreditava.</p>
+
+<p>então ela decidiu salvar o animais com esse seu super skate, todas as 20:00 da noite ela saia para salvar a vida dos
 animais em apuros, assim ela descobriu que conseguia falar com animais, assim ela ajudava os animais e fazia amizades 
-com eles. então um belo dia ela falou para sua mãe que ia estudar em seu quarto, enquanto isso isis foi salvar mais vidas
+com eles.</p> 
+<p>então um belo dia ela falou para sua mãe que ia estudar em seu quarto, enquanto isso isis foi salvar mais vidas
 o que isis não esperava e que sua mãe iria subir no seu quarto para ve como sua filha estava, ela abriu a porta de isis
 e ela nao estava la, entao ela esperou sua fiha chegar para isis se explicar o porque saiu de noite, então isis contou a 
-verdade para sua mãe e então sua mãe aceitou isso,e isis poderia sair até de tarde.
+verdade para sua mãe e então sua mãe aceitou isso,e isis poderia sair até de tarde.</p>
+
+
+<tag>
