--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ com eles.</p>
 <p>então um belo dia ela falou para sua mãe que ia estudar em seu quarto, enquanto isso isis foi salvar mais vidas
 o que isis não esperava e que sua mãe iria subir no seu quarto para ve como sua filha estava, ela abriu a porta de isis
 e ela nao estava la, entao ela esperou sua fiha chegar para isis se explicar o porque saiu de noite, então isis contou a 
-verdade para sua mãe e então sua mãe aceitou isso,e isis poderia sair até de tarde.</p>
+verdade para sua mãe e então sua mãe aceitou isso,e isis poderia sair até de tarde..</p>
 
 
 <tag>
