--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>isis e suas aventuras</h1>
 
-<p>era uma vez uma garota chamada isis, com cabelos loiros,olhos verdes, e era uma garota muito estrovertida e engraçada que em seu aniversario ganhou um skate de presente do seu avó falecido.
+<p>era uma vez uma garota chamada isis, <strong>com cabelos loiros,olhos verdes, e era uma garota muito estrovertida e engraçada</strong> que em seu aniversario
+     ganhou um skate de presente do seu avó falecido.
 mas o que ela nao sabia que esse skate tinha poderes inacreditaveis, esse skate quando vc pisava duas vezes rapidos 
 no chão ele soltava muita velocidade, quando isis descobiu isso ela ficou sem reação, tentou  conta para a mãe dela
 mais ela não acreditou, tentou contar para o seu pai e ele tambem não acreditava.</p>
@@ -11,7 +12,7 @@ com eles.</p>
 <p>então um belo dia ela falou para sua mãe que ia estudar em seu quarto, enquanto isso isis foi salvar mais vidas
 o que isis não esperava e que sua mãe iria subir no seu quarto para ve como sua filha estava, ela abriu a porta de isis
 e ela nao estava la, entao ela esperou sua fiha chegar para isis se explicar o porque saiu de noite, então isis contou a 
-verdade para sua mãe e então sua mãe aceitou isso,e isis poderia sair até de tarde..</p>
+verdade para sua mãe e então sua mãe aceitou isso,e isis poderia sair até de tarde.</p>
 
 
 <tag>
